<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity"
    >
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/reg_main_margin"
            android:layout_marginRight="@dimen/reg_main_margin"
            >

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_data_section_header"
                android:textColor="@color/colorHeader"
                android:layout_marginTop="@dimen/reg_new_section_margin"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/text_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_surname"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_name"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/text_exname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_exname"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_birthday"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email"
                />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
